--- a/src/main/resources/static/userPrompt.html
+++ b/src/main/resources/static/userPrompt.html
@@ -96,7 +96,7 @@
         }
 
         document.getElementById('startTestButton').addEventListener('click', function() {
-            window.location.href = 'user copy.html'; // 替换为目标页面的路径
+            window.location.href = 'usernew.html'; // 替换为目标页面的路径
         });
 
         // 页面加载时检查登录状态
